# audio-attention

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
data/: readme.txt
src/: CMakeLists.txt
src/audioCapture/cmake/: FindMatlab.cmake
src/cartesianVisualGenerator/: CMakeLists.txt
src/cartesianVisualGenerator/include/iCub/: cartesianVisualModule.h
src/cartesianVisualGenerator/src/: cartesianVisualModule.cpp  cartesianVisualThread.cpp  main.cpp
src/remoteInterface/: remoteMic.cpp
